--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style>
-        * {
+        body {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-        
-        body {
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -22,7 +18,6 @@
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
-            overflow: hidden;
         }
         
         #spoiler {
@@ -34,30 +29,19 @@
             text-align: center;
             line-height: 1.4;
         }
-        
-        .hidden {
-            display: none !important;
-        }
-        
-        .no-select {
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-        }
     </style>
 </head>
-<body class="no-select">
+<body>
     <div id="spoiler"></div>
 
     <script>
-        // Запрет контекстного меню без сообщений
+        // Запрет контекстного меню
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
             return false;
         });
         
-        // Запрет горячих клавиш без сообщений
+        // Запрет горячих клавиш
         document.addEventListener('keydown', function(e) {
             if (
                 e.ctrlKey && (e.keyCode === 85 || e.keyCode === 83) ||
@@ -69,28 +53,13 @@
             }
         });
         
-        // Полная блокировка выделения
+        // Блокировка выделения и копирования
         document.addEventListener('selectstart', function(e) {
-            if (!document.getElementById('spoiler').style.display || 
-                document.getElementById('spoiler').style.display === 'none') {
-                e.preventDefault();
-                return false;
-            }
+            e.preventDefault();
+            return false;
         });
         
-        // Блокировка копирования
         document.addEventListener('copy', function(e) {
-            e.preventDefault();
-            return false;
-        });
-        
-        // Блокировка вставки и перетаскивания
-        document.addEventListener('paste', function(e) {
-            e.preventDefault();
-            return false;
-        });
-        
-        document.addEventListener('dragstart', function(e) {
             e.preventDefault();
             return false;
         });
@@ -101,42 +70,49 @@
         let isShaking = false;
         let lastShakeTime = 0;
         const SHAKE_THRESHOLD = 15;
-        const SHAKE_DURATION = 5000; // 5 секунд
+        const SHAKE_DURATION = 5000;
         const SHAKE_INTERVAL = 200;
         let spoilerRevealed = false;
         
         const spoilerElement = document.getElementById('spoiler');
         
-        // Начальная проверка разрешений для iOS
-        if (typeof DeviceMotionEvent !== 'undefined' && typeof DeviceMotionEvent.requestPermission === 'function') {
-            // Автоматически запрашиваем разрешение при первом касании
-            let permissionRequested = false;
-            document.addEventListener('touchstart', function requestPermissionOnce() {
-                if (!permissionRequested) {
-                    permissionRequested = true;
-                    DeviceMotionEvent.requestPermission()
-                        .then(permissionState => {
-                            if (permissionState === 'granted') {
-                                startShakeDetection();
-                            }
-                        })
-                        .catch(() => {});
-                }
-            }, { once: true });
-        } else {
-            // Для Android и других устройств
-            startShakeDetection();
+        // Инициализация датчиков движения
+        function initShakeDetection() {
+            if (typeof DeviceMotionEvent !== 'undefined' && typeof DeviceMotionEvent.requestPermission === 'function') {
+                // iOS 13+
+                let permissionRequested = false;
+                const requestPermission = function() {
+                    if (!permissionRequested) {
+                        permissionRequested = true;
+                        DeviceMotionEvent.requestPermission()
+                            .then(permissionState => {
+                                if (permissionState === 'granted') {
+                                    startShakeDetection();
+                                }
+                            })
+                            .catch(() => {});
+                    }
+                };
+                
+                document.addEventListener('touchstart', requestPermission, { once: true });
+                document.addEventListener('click', requestPermission, { once: true });
+            } else {
+                // Другие устройства
+                startShakeDetection();
+            }
         }
         
         function startShakeDetection() {
-            window.addEventListener('devicemotion', handleMotion);
+            if (window.DeviceMotionEvent) {
+                window.addEventListener('devicemotion', handleMotion);
+            }
         }
         
         function handleMotion(event) {
-            if (spoilerRevealed) return; // Если текст уже показан, не обрабатываем тряску
+            if (spoilerRevealed) return;
             
             const acceleration = event.accelerationIncludingGravity;
-            const currentTime = new Date().getTime();
+            const currentTime = Date.now();
             
             if (currentTime - lastShakeTime < SHAKE_INTERVAL) {
                 return;
@@ -151,48 +127,29 @@
                     isShaking = true;
                     shakeCount = 0;
                     
-                    // Создаем визуальный индикатор тряски (невидимый для пользователя)
-                    const indicator = document.createElement('div');
-                    indicator.style.position = 'fixed';
-                    indicator.style.top = '-100px';
-                    indicator.style.left = '-100px';
-                    indicator.style.width = '1px';
-                    indicator.style.height = '1px';
-                    indicator.style.opacity = '0';
-                    document.body.appendChild(indicator);
-                    
                     shakeTimer = setInterval(() => {
                         shakeCount += 100;
-                        
-                        // Обновляем индикатор
-                        indicator.textContent = Math.floor(shakeCount / 1000);
                         
                         if (shakeCount >= SHAKE_DURATION) {
                             clearInterval(shakeTimer);
                             isShaking = false;
-                            document.body.removeChild(indicator);
-                            revealSpoiler();
+                            showSpoiler();
                         }
                     }, 100);
                 }
             }
         }
         
-        function revealSpoiler() {
-            // Расшифрованный текст спойлера
-            const spoilerText = decodeURIComponent('%D0%AE%D0%97%D0%98%D0%9B%D0%98%D0%A9%D0%95');
-            
-            spoilerElement.textContent = spoilerText;
-            spoilerElement.style.display = 'block';
+        function showSpoiler() {
             spoilerRevealed = true;
-            
-            // Останавливаем обработку тряски
+            spoilerElement.textContent = 'ЮЗИЛИЩЕ';
+            spoilerElement.style.display = 'block';
             window.removeEventListener('devicemotion', handleMotion);
         }
         
-        // Останавливаем тряску, если телефон перестали трясти
+        // Сброс тряски при бездействии
         let inactivityTimer;
-        window.addEventListener('devicemotion', function checkInactivity() {
+        window.addEventListener('devicemotion', function() {
             if (isShaking && !spoilerRevealed) {
                 clearTimeout(inactivityTimer);
                 inactivityTimer = setTimeout(() => {
@@ -205,42 +162,11 @@
             }
         });
         
-        // Защита от переключения вкладок - текст остается видимым
-        document.addEventListener('visibilitychange', function() {
-            if (spoilerRevealed && document.hidden) {
-                // При возвращении на страницу текст остается видимым
-                setTimeout(() => {
-                    if (document.hidden === false && spoilerRevealed) {
-                        spoilerElement.style.display = 'block';
-                    }
-                }, 100);
-            }
+        // Запуск при загрузке
+        window.addEventListener('DOMContentLoaded', function() {
+            setTimeout(initShakeDetection, 100);
         });
         
-        // Защита от iframe
-        if (window.self !== window.top) {
-            window.top.location = window.self.location;
-        }
-        
-        // Минимальная защита от DevTools (без сообщений)
-        setInterval(function() {
-            const debugDiv = document.createElement('div');
-            debugDiv.style.display = 'none';
-            Object.defineProperty(debugDiv, 'id', {
-                get: function() {
-                    document.body.innerHTML = '';
-                    throw new Error('Debugging detected');
-                }
-            });
-            console.log(debugDiv);
-        }, 5000);
-        
     </script>
-    
-    <noscript>
-        <style>
-            body { display: none !important; }
-        </style>
-    </noscript>
 </body>
 </html>
