--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         }
         
         #spoiler {
-            font-size: 14px;
-            color: #000000;
+            font-size: 20px;
+            color: #00ff00;
             display: none;
             cursor: default;
             max-width: 200px;
             text-align: center;
             line-height: 1.4;
+            text-shadow: 0 0 5px rgba(0, 255, 0, 0, 5);
         }
     </style>
 </head>
