--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         #spoiler {
             font-size: 20px;
-            color: #00ff00;
+            color: #32cd32;
             display: none;
             cursor: default;
             max-width: 200px;
@@ -143,7 +143,7 @@
         
         function showSpoiler() {
             spoilerRevealed = true;
-            spoilerElement.textContent = 'ЮЗИЛИЩЕ';
+            spoilerElement.textContent = 'КОД СПОЙЛЕРА: ЮЗИЛИЩЕ';
             spoilerElement.style.display = 'block';
             window.removeEventListener('devicemotion', handleMotion);
         }
