--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         #spoiler {
             font-size: 20px;
-            color: #32CD32;
+            color: yellow;
             display: none;
             cursor: default;
             max-width: 200px;
