--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         
         #spoiler {
             font-size: 20px;
-            color: yellow;
+            font-weight: bold;
+            color: #00FF00 !important;
             display: none;
             cursor: default;
             max-width: 200px;
