--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             max-width: 200px;
             text-align: center;
             line-height: 1.4;
-            text-shadow: 0 0 10px #00FF00, 0 0 20px #00FF00; /* Неоновое свечение */
+            text-shadow: 0 0 5px #00FF00, 0 0 20px #00FF00; /* Неоновое свечение */
         }
     </style>
 </head>
@@ -144,14 +144,14 @@
         
         function showSpoiler() {
             spoilerRevealed = true;
-            spoilerElement.textContent = 'ЮЗИЛИЩЕ';
+            spoilerElement.textContent = 'Код спойлера: ЮЗИЛИЩЕ';
             spoilerElement.style.display = 'block';
             
             // Дополнительно устанавливаем цвет через JavaScript
             spoilerElement.style.color = '#00FF00';
             spoilerElement.style.fontSize = '20px';
             spoilerElement.style.fontWeight = 'bold';
-            spoilerElement.style.textShadow = '0 0 10px #00FF00, 0 0 20px #00FF00';
+            spoilerElement.style.textShadow = '0 0 5px #00FF00, 0 0 20px #00FF00';
             
             window.removeEventListener('devicemotion', handleMotion);
         }
