--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             if (spoilerRevealed) return;
             
             spoilerRevealed = true;
-            spoilerElement.textContent = 'Код спойлера: ЮЗИЛИЩЕ';
+            spoilerElement.textContent = 'Код спойлер: ЮЗИЛИЩЕ';
             spoilerElement.style.display = 'block';
             spoilerElement.style.color = '#00FF00';
             spoilerElement.style.fontSize = '20px';
